[package]
name = "aws-waf-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
uuid = {version = "1.10.0" , features = ["v4"]}
struct_iterable = "0.1.1"
tl = "0.7.8"
rquest = {version = "0.23.3" , features = ["brotli","cookies"]}
tokio = {version = "1.40.0" , features = ["full"]}
