[package]
name = "aws-waf-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
uuid = {version = "1.10.0" , features = ["v4"]}
struct_iterable = "0.1.1"
tl = "0.7.8"
rquest = {version = "0.23.3" , features = ["brotli","cookies", "json"]}
tokio = {version = "1.40.0" , features = ["full"]}
aes-gcm = "0.10.3"
hex = "0.4.3"
crc32fast = "1.4.2"
base64 = "0.22.1"
scrypt = {version = "0.2" , default-features = false }
sha2 = "0.10.8"
url = "2.5.2"
regex = "1.11.0"
